# hw_goit_web_14

./: .env.example  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 129adf14c68a_done.py  44560b35315e_init.py  87a7c9bba397_migr.py
docs/: conf.py
src/: schemas.py
src/config/: config.py
src/db/: db_connection.py  models.py
src/middlewares/: middlewares.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/template/register/: confirm.html
tests/: conftest.py  contacts_repo_test.py  route_auth_test.py
